--- a/styling.css
+++ b/styling.css
@@ -1,23 +1,13 @@
 body {
-  width: 240px;
-  height: 240px;
-  background-color: #fff;
-  background-image: linear-gradient(
-      45deg,
-      #000 25%,
-      transparent 25%,
-      transparent 75%,
-      #000 75%,
-      #000
-    ),
-    linear-gradient(
-      -45deg,
-      #000 25%,
-      transparent 25%,
-      transparent 75%,
-      #000 75%,
-      #000
+    height: 100%;
+    width: 100%;
+    background: conic-gradient(
+        #dc57af 90deg,
+        #a80f75 90deg 180deg,
+        #dc57af 180deg 270deg,
+        #a80f75 270deg
     );
-  background-size: 60px 60px;
-  background-repeat: repeat;
+    background-repeat: repeat ;
+    background-size: 60px 60px;
+    background-position: top left;
 }
