--- a/styling.css
+++ b/styling.css
@@ -2,10 +2,10 @@ body {
     height: 100%;
     width: 100%;
     background: conic-gradient(
-        #dc57af 90deg,
-        #a80f75 90deg 180deg,
-        #dc57af 180deg 270deg,
-        #a80f75 270deg
+        #e9ce82 90deg,
+        #c87d22 90deg 180deg,
+        #e9ce82 180deg 270deg,
+        #c87d22 270deg
     );
     background-repeat: repeat ;
     background-size: 60px 60px;
